# empede

./: .drone.yml  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  Dockerfile  LICENSE.md  README.md  release.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust-release.yml  rust.yml
src/: main.rs  mpd.rs
src/routes/: art.rs  browser.rs  controls.rs  index.rs  mod.rs  player.rs  queue.rs  sse.rs
static/: style.css
templates/: browser.html  current.html  index.html  player.html  queue.html
