[package]
name = "empede"
description = "A web client for MPD"
version = "0.1.12"
edition = "2021"
license = "MIT"
repository = "https://github.com/vijfhoek/empede"

[dependencies]
anyhow = "1.0.70"
askama = { version = "0.12.0", default-features = false }
askama_tide = "0.15.0"
async-std = { version = "1.12.0", features = ["attributes"] }
infer = { version = "0.13.0", default-features = false }
mpdrs = "0.1.0"
percent-encoding = "2.2.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_qs = "0.12.0"
tide = "0.16.0"
tide-tracing = "0.0.12"
tracing = { version = "0.1.37", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["std", "fmt"] }
